[package]
name = "velopack-test"
version = "0.1.0"
authors = ["Caelan Sayler <git@caesay.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fltk = { version = "1.4", features = ["fltk-bundled"] }
fltk-theme = "0.7"
#fltk-decl = { version = "0.2", features = ["json"] }
# tr = { version = "0.1.7", default-features = false }

# [build-dependencies]
# fl2rust = "0.5"